--- a/models/mart/core/mart.yml
+++ b/models/mart/core/mart.yml
@@ -9,80 +9,42 @@ models:
         tests:
           - not_null
           - unique
-
       - name: order_status
         tests:
           - accepted_values:
-              values:
-                - delivered
-                - shipped
-                - canceled
-                - invoiced
-                - processing
-                - unavailable
+              values: ['delivered','shipped','canceled','invoiced','processing','unavailable']
 
   - name: dim_customers
     description: > 
-      Customer dimension table"
+      Customer dimension table
     columns:
       - name: customer_unique_id
         tests:
           - not_null
           - unique
-
       - name: customer_id
         tests:
           - not_null
-
       - name: customer_city
         tests:
           - not_null
-
       - name: customer_state
         tests:
           - not_null
 
-  - name: dim_payments
+  - name: dim_delivery
     description: >
-       Customer payment table
+      Customer delivery timeline
     columns:
       - name: order_id
         tests:
           - not_null
           - unique
-          
-      - name: payment_type
+      - name: order_status
         tests:
           - not_null
-       
-      - name: payment_installments
-        tests:
-          - not_null
-
-  - name: dim_date
-    description: >
-       Ttransaction date table
-    columns:
-      - name: order_date
-        tests:
-          - not_null
-          - unique
-          
-      - name: year
-        tests:
-          - not_null
-       
-      - name: month
-        tests:
-          - not_null
-
-      - name: day_of_year
-        tests:
-          - not_null
-
       
-          
-          
-        
-       
-        
+              
+
+
+
